fix(PageHeader): collapsed breadcrumb tab disappears on resize

--- a/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
+++ b/packages/ibm-products-styles/src/components/PageHeader/_page-header.scss
@@ -361,8 +361,7 @@ $right-section-alt-width: 100% - $left-section-alt-width;
 
   .#{$block-class}__title-row {
     --title-row-margin-top: #{$spacing-01}; /* spacing needed in case of editable title, otherwise top of focus indicator hidden */
-
-    margin-top: var(--title-row-margin-top);
+    
     margin-bottom: 0;
     transform: translateY(
       $spacing-01
